Fix[component, script](Header, isLogin): fixed login visible(pfp will not show)

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -19,6 +19,6 @@
 }
 
 .headerDesktop {
-    @apply xl:top-0 xl:flex xl:translate-x-0 xl:w-full xl:h-min xl:flex-row xl:items-center bg-transparent01dp xl:justify-between xl:px-[25%];
-    backdrop-filter: blur(6px);
+    @apply xl:py-0 xl:text-xl xl:top-0 xl:flex xl:translate-x-0 xl:w-full xl:h-min xl:flex-row xl:items-center bg-transparent01dp xl:justify-between xl:px-[25%];
 }
+
